# MeStudio

./: .env.example  .gitignore  README.md  meStudioAgent-plan.md  pyproject.toml  requirements.txt
mestudio/: __init__.py  main.py
mestudio/agents/: __init__.py  file_agent.py  search_agent.py  sub_agent.py  summary_agent.py
mestudio/cli/: __init__.py  interface.py  renderers.py  theme.py
mestudio/context/: __init__.py  budget.py  compactor.py  manager.py  memory_store.py  token_counter.py
mestudio/core/: __init__.py  config.py  llm_client.py  models.py  orchestrator.py
mestudio/planner/: __init__.py  task_planner.py  tracker.py
mestudio/tools/: __init__.py  agent_tools.py  context_tools.py  file_tools.py  plan_tools.py  registry.py  web_tools.py
mestudio/utils/: __init__.py  helpers.py  logging.py
tests/: conftest.py  test_context.py  test_context_robust.py  test_intensive.py  test_orchestrator_live.py  test_planner_live.py  test_subagents_live.py  test_tools.py
