[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mestudio"
version = "0.1.0"
description = "Local AI Agent Orchestrator powered by LM Studio"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "openai>=1.0",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.6",
    "markdownify>=0.11",
    "httpx>=0.27",
]

[project.scripts]
mestudio = "mestudio.main:cli_entry"

[tool.setuptools.packages.find]
include = ["mestudio*"]
